Fixed bug where request screen wouldn't be centered on ios emulator

--- a/LimoApp/src/app/request/request.page.scss
+++ b/LimoApp/src/app/request/request.page.scss
@@ -5,21 +5,18 @@ $ion-color-medium-tint: #d0d0d3;
 
 #map {
   width: 100%;
-  height: 69%;
+  height: 100%;
   border: 2px solid $ion-color-medium-tint;
   margin: 1%;
   margin-bottom: 5%;
 }
 
 .request-card {
-  position: absolute;
-  z-index: 1;
   margin-top: 5%;
   padding: 12px;
   border-radius: 10px;
   max-width: 300px;
   width: 85%;
-  justify-self: center;
 }
 
 .request-icon {
