--- a/LimoApp/src/global.scss
+++ b/LimoApp/src/global.scss
@@ -35,6 +35,12 @@ ion-item {
   --background: $ion-color-medium;
 }
 
+ion-grid {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+}
+
 .text-indent {
   text-indent: 15px;
 }
